Add Plugin and Extension SDK v1
